--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1><center>Recipes</center></h1>
+        <ul>
+            <a href="recipes/spaghetti.html">Spaghetti Recipe</a>
+            <a href="recipes/chicken.html">Chicken Recipe</a>
+            <a href="recipes/donut.html">Donut Recipe</a>
+            <a href="recipes/pizza.html">Pizza Recipe</a>
+
+        </ul>
+        
     </body>
 </html>
