--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -8,7 +8,8 @@
     </head>
 
     <body>
-        <h1>The Famous Spaghetti Recipe</h1>
+        <h1><center>The Famous Spaghetti Recipe</center></h1>
+        <a href="../index.html">Back</a>
     </body>
 
 </html>
