Edits to all files within the repository

--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     <body>
         <h1><center>Recipes</center></h1>
         <ul>
-            <a href="recipes/spaghetti.html">Spaghetti Recipe</a>
-            <a href="recipes/chicken.html">Chicken Recipe</a>
-            <a href="recipes/donut.html">Donut Recipe</a>
-            <a href="recipes/pizza.html">Pizza Recipe</a>
-
+            <li><a href="recipes/spaghetti.html">Spaghetti Recipe</a></li>
+            <li><a href="recipes/chicken.html">Chicken Recipe</a></li>
+            <li><a href="recipes/donut.html">Donut Recipe</a></li>
+            <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
         </ul>
         
     </body>
