Added images to the files and edits to the files in recipes

--- a/recipes/chicken.html
+++ b/recipes/chicken.html
@@ -18,6 +18,11 @@
             <li><a href="pizza.html">Back to Pizza Recipe</a></li>
             <li><a href="spaghetti.html">Back to Spaghetti Recipe</a></li>
         </ul>
+        <p>
+            <center>A classic dish of an excellent source of protein. </center>
+        </p>
+        <center><img src="../foodimages/chicken.jpg"></center>
+        <p></p>
     </body>
 
 </html>
