--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -18,6 +18,12 @@
             <li><a href="chicken.html">Back to Chicken Recipe</a></li>
             <li><a href="spaghetti.html">Back to Spaghetti Recipe</a></li>
         </ul>
+
+        <p>
+            <center>A classic dish of bread, sauce, and cheese mixed together perfectly. </center>
+        </p>
+        <center><img src="../foodimages/pizza.jpg"></center>
+        <p></p>
     </body>
 
 </html>
