--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -9,12 +9,20 @@
 
     <body>
         <h1><center>The Famous Spaghetti Recipe</center></h1>
+
         <ul>
             <li><a href="../index.html">Back to Main Page</a></li>
             <li><a href="donut.html">Back to Donut Recipe</a></li>
             <li><a href="pizza.html">Back to Pizza Recipe</a></li>
             <li><a href="chicken.html">Back to Chicken Recipe</a></li>
         </ul>
+
+
+        
+        <p><center>A classic dish of noodles with meat sauce. </center></p>
+        <center><img src="../foodimages/spaghetti.jpg"></center>
+        <p></p>
+
     </body>
 
 </html>
