--- a/recipes/donut.html
+++ b/recipes/donut.html
@@ -18,6 +18,11 @@
             <li><a href="pizza.html">Back to Pizza Recipe</a></li>
             <li><a href="spaghetti.html">Back to Spaghetti Recipe</a></li>
         </ul>
+        <p>
+            <center>A classic dish of fried bread and excellent frosting. </center>
+        </p>
+        <center><img src="../foodimages/donut.jpg"></center>
+        <p></p>
     </body>
 
 </html>
