Edit to spaghetti.html

--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -16,12 +16,19 @@
             <li><a href="pizza.html">Back to Pizza Recipe</a></li>
             <li><a href="chicken.html">Back to Chicken Recipe</a></li>
         </ul>
-
+        <center>
 
         
-        <p><center>A classic dish of noodles with meat sauce. </center></p>
-        <center><img src="../foodimages/spaghetti.jpg"></center>
-        <p></p>
+            <p>A classic dish of noodles with meat sauce. </p>
+            <img src="../foodimages/spaghetti.jpg">
+            <h3>How to prepare</h3>
+            <p>
+                First, get a pot and put water inside that pot. Get the pot of water to a boil and then add your noodles of choice into the mix.
+                After some time, feel the noodles or pasta to make sure it's ready. To know if it's ready is if it's soft all over and not hard to pinch. Then pour
+                into another pot with holes to get rid of the water and then pour it back into the other pot. And finally add whatever toppings or sauce you love. Enjoy!
+            </p>
+
+        </center>
 
     </body>
 
