Modified the index.html and the chicken.html and created a css file

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="index.css" />
         <title>
-            Recipes
+             Recipes
         </title>
     </head>
 
